cockroachlabs-preview-main/docs/v23.2/null-handling.mdx
---
title: "NULL Handling"
old_description: "Learn how NULL values are handled in CockroachDB SQL."
---

`NULL` is the term used to represent a missing value. A `NULL` value in a table is a value in a field that appears to be blank. A field with a `NULL` value is a field with no value.

This page summarizes how `NULL` values are handled in CockroachDB SQL. Each topic is demonstrated via the [built-in SQL client](/docs/v23.2/cockroach-sql).

When using the built-in client, `NULL` values are displayed using the word `NULL`. This distinguishes them from a character field that contains an empty string (`""`).

## NULLs and simple comparisons

Any simple comparison between a value and `NULL` results in `NULL`. The remaining cases are described in the next section.

This behavior is consistent with PostgreSQL as well as all other major RDBMS's.

```sql
> INSERT INTO customers (customer_id, cust_name, cust_email) VALUES (1, 'Smith', NULL);
```

```sql
> CREATE TABLE t1(
  a INT,
  b INT,
  c INT
);
```

```sql
> INSERT INTO t1 VALUES(1, 0, 0);
```

```sql
> INSERT INTO t1 VALUES(2, 0, 1);
```

```sql
> INSERT INTO t1 VALUES(3, 1, 0);
```

```sql
> INSERT INTO t1 VALUES(4, 1, 1);
```

```sql
> INSERT INTO t1 VALUES(5, NULL, 0);
```

```sql
> INSERT INTO t1 VALUES(6, NULL, 1);
```

```sql
> INSERT INTO t1 VALUES(7, NULL, NULL);
```

```sql
> SELECT * FROM t1;
```

```text
+---+------+------+
| a |  b   |  c   |
+---+------+------+
| 1 |    0 |    0 |
| 2 |    0 |    1 |
| 3 |    1 |    0 |
| 4 |    1 |    1 |
| 5 | NULL |    0 |
| 6 | NULL |    1 |
| 7 | NULL | NULL |
+---+------+------+
```

```sql
> SELECT * FROM t1 WHERE b < 10;
```

```text
+---+---+---+
| a | b | c |
+---+---+---+
| 1 | 0 | 0 |
| 2 | 0 | 1 |
| 3 | 1 | 0 |
| 4 | 1 | 1 |
+---+---+---+
```

```sql
> SELECT * FROM t1 WHERE NOT b > 10;
```

```text
+---+---+---+
| a | b | c |
+---+---+---+
| 1 | 0 | 0 |
| 2 | 0 | 1 |
| 3 | 1 | 0 |
| 4 | 1 | 1 |
+---+---+---+
```

```sql
> SELECT * FROM t1 WHERE b < 10 OR c = 1;
```

```text
+---+------+---+
| a |  b   | c |
+---+------+---+
| 1 |    0 | 0 |
| 2 |    0 | 1 |
| 3 |    1 | 0 |
| 4 |    1 | 1 |
| 6 | NULL | 1 |
+---+------+---+
```

```sql
> SELECT * FROM t1 WHERE b < 10 AND c = 1;
```

```text
+---+---+---+
| a | b | c |
+---+---+---+
| 2 | 0 | 1 |
| 4 | 1 | 1 |
+---+---+---+
```

```sql
> SELECT * FROM t1 WHERE NOT (b < 10 AND c = 1);
```

```text
+---+------+---+
| a |  b   | c |
+---+------+---+
| 1 |    0 | 0 |
| 3 |    1 | 0 |
| 5 | NULL | 0 |
+---+------+---+
```

```sql
> SELECT * FROM t1 WHERE NOT (c = 1 AND b < 10);
```

```text
+---+------+---+
| a |  b   | c |
+---+------+---+
| 1 |    0 | 0 |
| 3 |    1 | 0 |
| 5 | NULL | 0 |
+---+------+---+
```

Use the `IS NULL` or `IS NOT NULL` clauses when checking for `NULL` values.

```sql
> SELECT * FROM t1 WHERE b IS NULL AND c IS NOT NULL;
```

```text
+---+------+---+
| a |  b   | c |
+---+------+---+
| 5 | NULL | 0 |
| 6 | NULL | 1 |
+---+------+---+
```

## NULLs and conditional operators

The [conditional operators](/docs/v23.2/scalar-expressions#conditional-expressions) (including `IF`, `COALESCE`, `IFNULL`) only evaluate some operands depending on the value of a condition operand, so their result is not always `NULL` depending on the given operands.

For example, `COALESCE(1, NULL)` will always return `1` even though the second operand is `NULL`.

## NULLs and ternary logic

`AND`, `OR` and `IS` implement ternary logic, as follows.

<table><thead><tr><th>Expression</th><th>Result</th></tr></thead><tbody><tr><td><code>FALSE AND FALSE</code></td><td><code>FALSE</code></td></tr><tr><td><code>FALSE AND TRUE</code></td><td><code>FALSE</code></td></tr><tr><td><code>FALSE AND NULL</code></td><td><code>FALSE</code></td></tr><tr><td><code>TRUE AND FALSE</code></td><td><code>FALSE</code></td></tr><tr><td><code>TRUE AND TRUE</code></td><td><code>TRUE</code></td></tr><tr><td><code>TRUE AND NULL</code></td><td><code>NULL</code></td></tr><tr><td><code>NULL AND FALSE</code></td><td><code>FALSE</code></td></tr><tr><td><code>NULL AND TRUE</code></td><td><code>NULL</code></td></tr><tr><td><code>NULL AND NULL</code></td><td><code>NULL</code></td></tr></tbody></table>

<table><thead><tr><th>Expression</th><th>Result</th></tr></thead><tbody><tr><td><code>FALSE OR FALSE</code></td><td><code>FALSE</code></td></tr><tr><td><code>FALSE OR TRUE</code></td><td><code>TRUE</code></td></tr><tr><td><code>FALSE OR NULL</code></td><td><code>NULL</code></td></tr><tr><td><code>TRUE OR FALSE</code></td><td><code>TRUE</code></td></tr><tr><td><code>TRUE OR TRUE</code></td><td><code>TRUE</code></td></tr><tr><td><code>TRUE OR NULL</code></td><td><code>TRUE</code></td></tr><tr><td><code>NULL OR FALSE</code></td><td><code>NULL</code></td></tr><tr><td><code>NULL OR TRUE</code></td><td><code>TRUE</code></td></tr><tr><td><code>NULL OR NULL</code></td><td><code>NULL</code></td></tr></tbody></table>

<table><thead><tr><th>Expression</th><th>Result</th></tr></thead><tbody><tr><td><code>FALSE IS FALSE</code></td><td><code>TRUE</code></td></tr><tr><td><code>FALSE IS TRUE</code></td><td><code>FALSE</code></td></tr><tr><td><code>FALSE IS NULL</code></td><td><code>FALSE</code></td></tr><tr><td><code>TRUE IS FALSE</code></td><td><code>FALSE</code></td></tr><tr><td><code>TRUE IS TRUE</code></td><td><code>TRUE</code></td></tr><tr><td><code>TRUE IS NULL</code></td><td><code>FALSE</code></td></tr><tr><td><code>NULL IS FALSE</code></td><td><code>FALSE</code></td></tr><tr><td><code>NULL IS TRUE</code></td><td><code>FALSE</code></td></tr><tr><td><code>NULL IS NULL</code></td><td><code>TRUE</code></td></tr></tbody></table>

## NULLs and arithmetic

Arithmetic operations involving a `NULL` value will yield a `NULL` result.

```sql
> SELECT a, b, c, b*0, b*c, b+c FROM t1;
```

```text
+---+------+------+-------+-------+-------+
| a |  b   |  c   | b * 0 | b * c | b + c |
+---+------+------+-------+-------+-------+
| 1 |    0 |    0 |     0 |     0 |     0 |
| 2 |    0 |    1 |     0 |     0 |     1 |
| 3 |    1 |    0 |     0 |     0 |     1 |
| 4 |    1 |    1 |     0 |     1 |     2 |
| 5 | NULL |    0 | NULL  | NULL  | NULL  |
| 6 | NULL |    1 | NULL  | NULL  | NULL  |
| 7 | NULL | NULL | NULL  | NULL  | NULL  |
+---+------+------+-------+-------+-------+
```

## NULLs and aggregate functions

Aggregate [functions](/docs/v23.2/functions-and-operators) are those that operate on a set of rows and return a single value. The example data has been repeated here to make it easier to understand the results.

```sql
> SELECT * FROM t1;
```

```text
+---+------+------+
| a |  b   |  c   |
+---+------+------+
| 1 |    0 |    0 |
| 2 |    0 |    1 |
| 3 |    1 |    0 |
| 4 |    1 |    1 |
| 5 | NULL |    0 |
| 6 | NULL |    1 |
| 7 | NULL | NULL |
+---+------+------+
```

```sql
> SELECT COUNT(*), COUNT(b), SUM(b), AVG(b), MIN(b), MAX(b) FROM t1;
```

```text
+----------+----------+--------+--------------------+--------+--------+
| COUNT(*) | COUNT(b) | SUM(b) |       AVG(b)       | MIN(b) | MAX(b) |
+----------+----------+--------+--------------------+--------+--------+
|        7 |        4 |      2 | 0.5000000000000000 |      0 |      1 |
+----------+----------+--------+--------------------+--------+--------+
```

Note the following:

- `NULL` values are not included in the `COUNT()` of a column. `COUNT(*)` returns 7 while `COUNT(b)` returns 4.
- `NULL` values are not considered as high or low values in `MIN()` or `MAX()`.
- `AVG(b)` returns `SUM(b)/COUNT(b)`, which is different than `AVG(*)` as `NULL` values are not considered in the `COUNT(b)` of rows. See [NULLs as Other Values](#nulls-as-other-values) for more details.

## NULL as a distinct value

`NULL` values are considered distinct from other values and are included in the list of distinct values from a column.

```sql
> SELECT DISTINCT b FROM t1;
```

```text
+------+
|  b   |
+------+
|    0 |
|    1 |
| NULL |
+------+
```

However, counting the number of distinct values excludes `NULL`s, which is consistent with the `COUNT()` function.

```sql
> SELECT COUNT(DISTINCT b) FROM t1;
```

```text
+-------------------+
| count(DISTINCT b) |
+-------------------+
|                 2 |
+-------------------+
```

## NULLs as other values

In some cases, you may want to include `NULL` values in arithmetic or aggregate function calculations. To do so, use the `IFNULL()` function to substitute a value for `NULL` during calculations.

For example, let's say you want to calculate the average value of column `b` as being the `SUM()` of all numbers in `b` divided by the total number of rows, regardless of whether `b`'s value is `NULL`. In this case, you would use `AVG(IFNULL(b, 0))`, where `IFNULL(b, 0)` substitutes a value of zero (0) for `NULL`s during the calculation.

```sql
> SELECT COUNT(*), COUNT(b), SUM(b), AVG(b), AVG(IFNULL(b, 0)), MIN(b), MAX(b) FROM t1;
```

```text
+----------+----------+--------+--------------------+--------------------+--------+--------+
| COUNT(*) | COUNT(b) | SUM(b) |       AVG(b)       | AVG(IFNULL(b, 0))  | MIN(b) | MAX(b) |
+----------+----------+--------+--------------------+--------------------+--------+--------+
|        7 |        4 |      2 | 0.5000000000000000 | 0.2857142857142857 |      0 |      1 |
+----------+----------+--------+--------------------+--------------------+--------+--------+
```

## NULLs and set operations

`NULL` values are considered as part of a `UNION` [set operation](/docs/v23.2/selection-queries#set-operations).

```sql
> SELECT b FROM t1 UNION SELECT b FROM t1;
```

```text
+------+
|  b   |
+------+
|    0 |
|    1 |
| NULL |
+------+
```

## NULLs and sorting

When [sorting a column](/docs/v23.2/order-by) containing `NULL` values, CockroachDB sorts `NULL` values first with `ASC` and last with `DESC`. This differs from PostgreSQL, which sorts `NULL` values last with `ASC` and first with `DESC`.

Use the `NULLS FIRST` and `NULLS LAST` options of the [`ORDER BY`](/docs/v23.2/order-by#parameters) to change where `NULL` values appear in the sort order.

```sql
> SELECT * FROM t1 ORDER BY b ASC;
```

```text
+---+------+------+
| a |  b   |  c   |
+---+------+------+
| 6 | NULL |    1 |
| 5 | NULL |    0 |
| 7 | NULL | NULL |
| 1 |    0 |    0 |
| 2 |    0 |    1 |
| 4 |    1 |    1 |
| 3 |    1 |    0 |
+---+------+------+
```

```sql
> SELECT * FROM t1 ORDER BY b DESC;
```

```text
+---+------+------+
| a |  b   |  c   |
+---+------+------+
| 4 |    1 |    1 |
| 3 |    1 |    0 |
| 2 |    0 |    1 |
| 1 |    0 |    0 |
| 7 | NULL | NULL |
| 6 | NULL |    1 |
| 5 | NULL |    0 |
+---+------+------+
```

## NULLs and unique constraints

`NULL` values are not considered unique. Therefore, if a table has a `UNIQUE` constraint on one or more columns that are optional (nullable), it is possible to insert multiple rows with `NULL` values in those columns, as shown in the example below.

```sql
> CREATE TABLE t2(a INT, b INT UNIQUE);
```

```sql
> INSERT INTO t2 VALUES(1, 1);
```

```sql
> INSERT INTO t2 VALUES(2, NULL);
```

```sql
> INSERT INTO t2 VALUES(3, NULL);
```

```sql
> SELECT * FROM t2;
```

```text
+---+------+
| a |  b   |
+---+------+
| 1 |    1 |
| 2 | NULL |
| 3 | NULL |
+---+------+
```

## NULLs and CHECK Constraints

A [`CHECK` constraint](/docs/v23.2/check) expression that evaluates to `NULL` is considered to pass, allowing for concise expressions like `discount < price` without worrying about adding `OR discount IS NULL` clauses. When non-null validation is desired, the usual `NOT NULL` constraint can be used alongside a `CHECK` constraint.

```sql
> CREATE TABLE products (id STRING PRIMARY KEY, price INT NOT NULL CHECK (price > 0), discount INT, CHECK (discount <= price));
```

```sql
> INSERT INTO products (id, price) VALUES ('ncc-1701-d', 100);
```

```sql
> INSERT INTO products (id, price, discount) VALUES ('ncc-1701-a', 100, 50);
```

```sql
> SELECT * FROM products;
```

```text
+----------+-------+----------+
|    id    | price | discount |
+----------+-------+----------+
| ncc1701a |   100 |       50 |
| ncc1701d |   100 | NULL     |
+----------+-------+----------+
```

```sql
> INSERT INTO products (id, price) VALUES ('ncc-1701-b', -5);
```

```text
failed to satisfy CHECK constraint (price > 0)
```

```sql
> INSERT INTO products (id, price, discount) VALUES ('ncc-1701-b', 100, 150);
```

```text
failed to satisfy CHECK constraint (discount <= price)
```

## NULLs and concatenation with other types

Concatenation between a non-`NULL` value and a `NULL` value results in a `NULL` value.

<Note>
In CockroachDB v20.2 and earlier, for all values other than [`STRING`](/docs/v23.2/string), concatenation between a non-`NULL` value and a `NULL` value results in an [`ARRAY`](/docs/v23.2/array) of the non-`NULL` value's type. To return an `ARRAY` of a specific type from a `NULL` concatenation in CockroachDB v21.1 and later, [cast](/docs/v23.2/data-types#data-type-conversions-and-casts) the `NULL` value to an `ARRAY`.
</Note>

For example:

```sql
> SELECT NULL || 1;
```

```text
  ?column?
------------
  NULL
(1 row)
```

```sql
> SELECT NULL || `item`;
```

```text
  ?column?
------------
  NULL
(1 row)
```
